# CazzuBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  build_bot_and_deploy.bat  build_bot_and_deploy.sh  db_guild_interface.py  db_interface.py  db_interface_guild.py  db_settings_aggregator.py  db_user_interface.py  dev.py  docker-compose-template.yaml  docker-compose.yaml  docker-compose.yml  interfacedb.py  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  shutdown.sh  shutdown_bot.sh  test.py  utility.py
Slots_Simulation/: data0.json  data1.json  data2.json  data3.json  data4.json  main.py  slots.py
cog/: compensation.py  experience.py  frogs.py  leaderboards.py  levels.py  listener.py  member.py  misc.py  owner.py  ranks.py  slots.py
cogs/: dev.py  echo.py  mod.py
customs/: cog.py
docs/: Tasks.md
ext/: board.py  counter.py  daily.py  dev.py  echo.py  experience.py  frog.py  hotswap.py  inktober.py  level.py  levels.py  levels_old.py  listener.py  member.py  mod.py  owner.py  poll.py  quarterly.py  rank.py  ranks.py  story.py  welcome.py
src/: __init__.py  aio_middleware_patch.py  attributemap.py  cazzubot.py  custom_converters.py  db_aggregator.py  db_interface.py  db_schema.py  db_settings_aggregator.py  db_templates.py  frog.py  frog_factory.py  future_time.py  json_handler.py  leaderboard.py  level.py  levels_helper.py  modlog.py  ntlp.py  rank - Copy.py  rank.py  serializers.py  setting.py  setting_namespace.py  settings.py  settings_aggregator.py  task.py  task_manager.py  user_json.py  utility.py  welcome.py
src/db/: __init__.py  channel.py  counter.py  frog.py  frog_spawn.py  guild.py  internal.py  level.py  levels.py  member.py  member_exp.py  member_exp_log.py  member_frog.py  member_frog_log.py  member_rank.py  modlog.py  poll.py  rank.py  rank_threshold.py  schema.py  settings.py  table.py  task.py  user.py  utility.py  welcome.py
src/extensions/: dev.py  echo.py  mod.py
