[project]
name = "cazzubot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.3",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "asyncpg==0.29.0",
    "asyncpg-stubs==0.29.1",
    "attrs==23.2.0",
    "black==24.3.0",
    "cfgv==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "discord-py==2.3.2",
    "distlib==0.3.8",
    "filelock==3.13.3",
    "frozenlist==1.4.1",
    "identify==2.5.35",
    "idna==3.6",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "multidict==6.0.5",
    "mypy-extensions==1.0.0",
    "nodeenv==1.8.0",
    "packaging==24.0",
    "parsedatetime==2.6",
    "pathspec==0.12.1",
    "pendulum==2.1.2",
    "platformdirs==4.2.0",
    "pre-commit==3.7.0",
    "python-dateutil==2.9.0.post0",
    "pytzdata==2020.1",
    "pyyaml==6.0.1",
    "referencing==0.34.0",
    "rpds-py==0.18.0",
    "ruff==0.3.5",
    "six==1.16.0",
    "tomli==2.0.1",
    "typing-extensions==4.10.0",
    "virtualenv==20.25.1",
    "yarl==1.9.4",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 75
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "tab"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# [tool.ruff.lint]
# # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# select = [
#     "E",
#     "F",
#     "W",
#     "C90",
#     "I",
#     "D",
#     "N",
#     "D201",
#     "ASYNC",
#     "PL",
#     "EM",
#     "EXE",
#     "FBT",
#     "ICN",
#     "INP",
#     "ISC",
#     "PGH",
#     "PIE",
#     "PTH",
#     "PYI",
#     "RET",
#     "RSE",
#     "RUF",
#     "SIM",
#     "SLF",
#     "TCH",
#     "TID",
#     "TRY",
#     "UP",
# ]
# ignore = [
#     "D101",
#     "D102",
#     "D103",
#     "D105",
#     "D106",
#     "D107",
#     "D203",
#     "D213",
#     "SIM300",
# ]
#
# # Allow autofix for all enabled rules (when `--fix`) is provided.
# fixable = [
#     "A",
#     "B",
#     "C",
#     "D",
#     "E",
#     "F",
#     "G",
#     "I",
#     "N",
#     "Q",
#     "S",
#     "T",
#     "W",
#     "ANN",
#     "ARG",
#     "BLE",
#     "COM",
#     "DJ",
#     "DTZ",
#     "EM",
#     "ERA",
#     "EXE",
#     "FBT",
#     "ICN",
#     "INP",
#     "ISC",
#     "NPY",
#     "PD",
#     "PGH",
#     "PIE",
#     "PL",
#     "PT",
#     "PTH",
#     "PYI",
#     "RET",
#     "RSE",
#     "RUF",
#     "SIM",
#     "SLF",
#     "TCH",
#     "TID",
#     "TRY",
#     "UP",
#     "YTT",
# ]
# unfixable = ["F401", "F841"]
#
# # Exclude a variety of commonly ignored directories.
# exclude = [
#     ".bzr",
#     ".direnv",
#     ".eggs",
#     ".git",
#     ".git-rewrite",
#     ".hg",
#     ".mypy_cache",
#     ".nox",
#     ".pants.d",
#     ".pytype",
#     ".ruff_cache",
#     ".svn",
#     ".tox",
#     ".venv",
#     "__pypackages__",
#     "_build",
#     "buck-out",
#     "build",
#     "dist",
#     "node_modules",
#     "venv",
# ]
# per-file-ignores = {}
#
# [tool.ruff.mccabe]
# # Unlike Flake8, default to a complexity level of 10.
# max-complexity = 10
#
# [tool.ruff.isort]
# lines-after-imports = 2
#
# [rools.ruff.pydocstyle]
# convention = "pep257"
